--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8">
+    {% load staticfiles %}
+    {% block style_css %}<link rel="stylesheet" href="{% static 'style.css' %}" />{% endblock %}
  <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 <body>
+    <div id="heading"><h1>{% block heading %}Index{% endblock %}</h1></div>
  <div id="sidebar">
  {% block sidebar %}
-
+<ul>
+     <li><a href="{% url 'news:index' %}">News</a></li>
+     <li><a href="{% url 'contacts:contacts' %}">Contacts</a></li>
+     <li><a href="{% url 'partners:partners' %}">Partners</a></li>
+</ul>
  {% endblock %}
  </div>
  <div id="content">
