--- a/partners/templates/partners/edit.html
+++ b/partners/templates/partners/edit.html
@@ -5,7 +5,7 @@
 {% block content %}
 <form action="{% url 'partners:done' %}" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <input type="submit" value="Add new partner"> 
 </form>
 {% endblock %}
